--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
   "overrides": {
     "react-error-overlay": "6.0.9"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "@types/react": "^19.2.7"
+  }
 }
